--- a/c-api/arg.po
+++ b/c-api/arg.po
@@ -13,6 +13,8 @@
 # Tiago Henrique <tiagohrm@gmail.com>, 2018
 # Rafael Marques <rafaelomarques@gmail.com>, 2019
 # Caio Carvalho <caiocarvalho.py@gmail.com>, 2019
+# Rafael Fontenelle <rffontenelle@gmail.com>, 2019
+# Hildeberto Abreu Magalhães <hildeberto@gmail.com>, 2019
 #
 #, fuzzy
 msgid ""
@@ -21,7 +23,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-10-31 11:48+0000\n"
 "PO-Revision-Date: 2017-02-16 17:33+0000\n"
-"Last-Translator: Caio Carvalho <caiocarvalho.py@gmail.com>, 2019\n"
+"Last-Translator: Hildeberto Abreu Magalhães <hildeberto@gmail.com>, 2019\n"
 "Language-Team: Portuguese (Brazil) (https://www.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
 "MIME-Version: 1.0\n"
@@ -32,7 +34,7 @@ msgstr ""
 
 #: ../../c-api/arg.rst:6
 msgid "Parsing arguments and building values"
-msgstr "Analisando argumentos e construindo valores"
+msgstr "Análise de argumentos e construção de valores"
 
 #: ../../c-api/arg.rst:8
 msgid ""
@@ -41,7 +43,8 @@ msgid ""
 "`extending-index`."
 msgstr ""
 "Essas funções são úteis ao criar suas próprias funções e métodos. "
-"Informações adicionais e exemplos estão disponíveis em:ref:`extending-index`."
+"Informações adicionais e exemplos estão disponíveis em  :ref:`extending-"
+"index`."
 
 #: ../../c-api/arg.rst:12
 msgid ""
@@ -170,11 +173,11 @@ msgid ""
 msgstr ""
 "Converte um objeto Unicode para um ponteiro em C de uma string. Um ponteiro "
 "para uma string existente é armazenado na variável do ponteiro do caractere "
-"cujo o endereço que você está passando. A string em C é NUL-terminated. A "
+"cujo o endereço que você está passando. A string em C é terminada em NULO. A "
 "string em Python não deve conter pontos de código nulo embutidos; se isso "
-"acontecer, uma exceção \\:exc\\:`ValueError` é levantada. Objetos Unicode "
-"são convertidos para strings em C usando a codificação ``'utf-8'``. Se essa "
-"conversão falhar, uma exceção \\:exc\\`UnicodeError` é levantada."
+"acontecer, uma exceção :exc:`ValueError` é levantada. Objetos Unicode são "
+"convertidos para strings em C usando a codificação ``'utf-8'``. Se essa "
+"conversão falhar, uma exceção :exc:`UnicodeError` é levantada."
 
 #: ../../c-api/arg.rst:77
 msgid ""
@@ -193,7 +196,7 @@ msgid ""
 "Previously, :exc:`TypeError` was raised when embedded null code points were "
 "encountered in the Python string."
 msgstr ""
-"Anteriormente, a exceção \\:exc\\:`TypeError` era levantada quando pontos de "
+"Anteriormente, a exceção :exc:`TypeError` era levantada quando pontos de "
 "código nulo embutidos em string Python eram encontrados."
 
 #: ../../c-api/arg.rst:91
@@ -284,14 +287,14 @@ msgstr ""
 "Este formato converte objetos do tipo byte para um ponteiro C para uma "
 "cadeia de caracteres; não aceita objetos Unicode. O buffer de bytes não pode "
 "conter bytes nulos incorporados; se isso ocorrer uma exceção :exc:"
-"`ValueError` será lançada."
+"`ValueError` será levantada."
 
 #: ../../c-api/arg.rst:118
 msgid ""
 "Previously, :exc:`TypeError` was raised when embedded null bytes were "
 "encountered in the bytes buffer."
 msgstr ""
-"Anteriormente, :exc:`TypeError` foi lançado quando os bytes nulos "
+"Anteriormente, :exc:`TypeError` foi levantado quando os bytes nulos "
 "incorporados foram encontrados no buffer de bytes."
 
 #: ../../c-api/arg.rst:125
@@ -330,8 +333,8 @@ msgid ""
 "bytes object.  The C variable may also be declared as :c:type:`PyObject\\*`."
 msgstr ""
 "Necessita que o objeto python seja um objeto :classe:`bytes`, sem tentar "
-"nenhuma conversão.  Lança :exc:`TypeError` se o objeto não for um objeto do "
-"tipo byte.  A variavel C pode ser declarada como :c:tipo:`PyObject\\*`."
+"nenhuma conversão.  Levanta :exc:`TypeError` se o objeto não for um objeto "
+"do tipo byte.  A variável C pode ser declarada como :c:tipo:`PyObject\\*`."
 
 #: ../../c-api/arg.rst:139
 msgid "``Y`` (:class:`bytearray`) [PyByteArrayObject \\*]"
@@ -344,9 +347,9 @@ msgid ""
 "class:`bytearray` object. The C variable may also be declared as :c:type:"
 "`PyObject\\*`."
 msgstr ""
-"Requer que o objeto Python seja um objeto :classe:`bytearray`, sem aceitar "
-"qualquer conversão.  Lança :exc:`TypeError` se o objeto não é um objeto :"
-"classe:`bytearray`. A varíavel C apenas pode ser declarada como :c:tipo:"
+"Requer que o objeto Python seja um objeto :class:`bytearray`, sem aceitar "
+"qualquer conversão.  Levanta :exc:`TypeError` se o objeto não é um objeto :"
+"class:`bytearray`. A variável C apenas pode ser declarada como :c:tipo:"
 "`PyObject\\*`."
 
 #: ../../c-api/arg.rst:156
@@ -365,11 +368,11 @@ msgid ""
 msgstr ""
 "Converte um objeto Python Unicode para um ponteiro C para um buffer de "
 "caracteres Unicode terminado em NUL. Você deve passar o endereço de uma "
-"varíavel ponteiro  :c:tipo:`Py_UNICODE`,  que será preenchida com um "
+"variável ponteiro  :c:tipo:`Py_UNICODE`,  que será preenchida com um "
 "ponteiro para um buffer Unicode existente. Por favor, note que o comprimento "
-"de um caracter :c:tipo:`Py_UNICODE` depende das opções de compilação (está "
+"de um caractere :c:tipo:`Py_UNICODE` depende das opções de compilação (está "
 "entre 16 ou 32 bits). A string Python não deve conter pontos de código nulos "
-"incorporados, se isso ocorrer uma exceção :exc:`ValueError` será lançada."
+"incorporados, se isso ocorrer uma exceção :exc:`ValueError` será levantada."
 
 #: ../../c-api/arg.rst:157 ../../c-api/arg.rst:166 ../../c-api/arg.rst:174
 #: ../../c-api/arg.rst:182
@@ -425,8 +428,8 @@ msgid ""
 "The C variable may also be declared as :c:type:`PyObject\\*`."
 msgstr ""
 "Necessita que o objeto python seja um objeto Unicode, sem tentar alguma "
-"conversão. Lança :exc:`TypeError` se o objeto não for um objeto Unicode. A "
-"varíavel C deve ser declarada como :c:tipo:`PyObject\\*`."
+"conversão. Levanta :exc:`TypeError` se o objeto não for um objeto Unicode. A "
+"variável C deve ser declarada como :c:tipo:`PyObject\\*`."
 
 #: ../../c-api/arg.rst:192
 msgid "``w*`` (read-write :term:`bytes-like object`) [Py_buffer]"
@@ -781,7 +784,7 @@ msgstr ""
 "mas usa dois argumentos C: o primeiro é o endereço de um objeto do tipo "
 "Python, o segundo é um endereço da variável C (de tipo :c:type:`PyObject\\*) "
 "no qual o ponteiro do objeto está armazenado. Se o objeto Python não tiver o "
-"tipo necessário, :​​exc:`TypeError` é gerado. "
+"tipo necessário, :​​exc:`TypeError` é levantado. "
 
 #: ../../c-api/arg.rst:352 ../../c-api/arg.rst:657
 msgid "``O&`` (object) [*converter*, *anything*]"
@@ -809,10 +812,10 @@ msgid ""
 "*address* unmodified."
 msgstr ""
 "onde *object* é o objeto Python a ser convertido e *address* é o argumento :"
-"c:type:`void\\*` que foi passado para a função: c: func: `PyArg_Parse \\ *`. "
-"O * status * retornado deve ser `` 1`` para uma conversão bem-sucedida e `` "
-"0`` se a conversão falhar. Quando a conversão falha, a função * converter * "
-"deve gerar uma exceção e deixar o conteúdo de * endereço * inalterado."
+"c:type:`void\\*` que foi passado para a função :c:func:`PyArg_Parse\\*`. O "
+"*status* retornado deve ser ``1`` para uma conversão bem-sucedida e ``0`` se "
+"a conversão falhar. Quando a conversão falha, a função *converter* deve "
+"levantar uma exceção e deixar o conteúdo de *address* inalterado."
 
 #: ../../c-api/arg.rst:345
 msgid ""
