--- a/c-api/codec.po
+++ b/c-api/codec.po
@@ -148,15 +148,15 @@ msgid ""
 "integer giving the offset in the original string at which encoding/decoding "
 "should be resumed."
 msgstr ""
-"O retorno de chamada obtém um único argumento, uma instância de  :exc:"
+"O retorno de chamada obtém um único argumento, uma instância de :exc:"
 "`UnicodeEncodeError`, :exc:`UnicodeDecodeError` ou :exc:"
 "`UnicodeTranslateError` que contém informações sobre a sequencia "
 "problemática de caracteres ou bytes e seu deslocamento na string original "
 "(consulte  :ref:`unicodeexceptions` para funções que extraem essa "
-"informação). A função de retorno de chamada necessita lançar a exceção "
-"dada , ou retornar uma tupla de dois itens contendo a substituição para a "
-"sequência problemática, e um inteiro fornecendo o deslocamento na string "
-"original na qual a codificação/decodificação deve ser retomada."
+"informação). A função de retorno de chamada deve levantar a exceção dada, ou "
+"retornar uma tupla de dois itens contendo a substituição para a sequência "
+"problemática, e um inteiro fornecendo o deslocamento na string original na "
+"qual a codificação/decodificação deve ser retomada."
 
 #: ../../c-api/codec.rst:90
 msgid "Return ``0`` on success, ``-1`` on error."
