--- a/faq/programming.po
+++ b/faq/programming.po
@@ -6,6 +6,7 @@
 # Translators:
 # Tiago Henrique <tiagohrm@gmail.com>, 2017
 # Claudio Rogerio Carvalho Filho <excriptbrasil@gmail.com>, 2018
+# Marco Rougeth <marco@rougeth.com>, 2019
 #
 #, fuzzy
 msgid ""
@@ -14,8 +15,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-09-21 11:30+0000\n"
 "PO-Revision-Date: 2017-02-16 17:43+0000\n"
-"Last-Translator: Claudio Rogerio Carvalho Filho <excriptbrasil@gmail.com>, "
-"2018\n"
+"Last-Translator: Marco Rougeth <marco@rougeth.com>, 2019\n"
 "Language-Team: Portuguese (Brazil) (https://www.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
 "MIME-Version: 1.0\n"
@@ -790,10 +790,9 @@ msgid ""
 "has changed from ``[]`` to ``[10]``.  Since both the variables refer to the "
 "same object, using either name accesses the modified value ``[10]``."
 msgstr ""
-"Após invocar para :meth:`~list.append`, o conteúdo do objeto mutável alterou-"
-"se de ``[]`` para ``[10]``. Uma vez que ambas as variáveis referem-se ao "
-"mesmo objeto, usar qualquer um dos nomes acessará o valor modificado ``[10] "
-"``."
+"Após invocar para :meth:`~list.append`, o conteúdo do objeto mutável mudou "
+"de ``[]`` para ``[10]``. Uma vez que ambas as variáveis referem-se ao mesmo "
+"objeto, usar qualquer um dos nomes acessará o valor modificado ``[10]``."
 
 #: ../../faq/programming.rst:463
 msgid "If we instead assign an immutable object to ``x``::"
@@ -893,7 +892,7 @@ msgstr ""
 
 #: ../../faq/programming.rst:519
 msgid "By returning a tuple of the results::"
-msgstr "Retornando um Tupla com os resultados:"
+msgstr "Retornando um Tupla com os resultados::"
 
 #: ../../faq/programming.rst:530
 msgid "This is almost always the clearest solution."
