--- a/install/index.po
+++ b/install/index.po
@@ -12,6 +12,7 @@
 # Risaffi <erikrisaffi@gmail.com>, 2018
 # Rafael Marques <rafaelomarques@gmail.com>, 2019
 # felipe caridade <caridade500@gmail.com>, 2019
+# Rafael Fontenelle <rffontenelle@gmail.com>, 2019
 #
 #, fuzzy
 msgid ""
@@ -20,7 +21,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-09-01 14:24+0000\n"
 "PO-Revision-Date: 2017-02-16 17:46+0000\n"
-"Last-Translator: felipe caridade <caridade500@gmail.com>, 2019\n"
+"Last-Translator: Rafael Fontenelle <rffontenelle@gmail.com>, 2019\n"
 "Language-Team: Portuguese (Brazil) (https://www.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
 "MIME-Version: 1.0\n"
@@ -57,6 +58,10 @@ msgid ""
 "documentation at https://setuptools.readthedocs.io/en/latest/setuptools.html "
 "independently covers all of the relevant information currently included here."
 msgstr ""
+"Este documento está sendo mantido apenas até que a documentação do "
+"``setuptools`` em https://setuptools.readthedocs.io/en/latest/setuptools."
+"html cubra independentemente todas as informações relevantes atualmente "
+"incluídas aqui."
 
 #: ../../install/index.rst:23
 msgid ""
