--- a/tutorial/interpreter.po
+++ b/tutorial/interpreter.po
@@ -64,6 +64,11 @@ msgid ""
 "file:`py` command. See :ref:`setting-envvars` for other ways to launch "
 "Python."
 msgstr ""
+"Em máquinas Windows onde você instalou Python a partir da :ref:`Microsoft "
+"Store <windows-store>`, o comando :file:`python3.8` estará disponível. Se "
+"você tem o  :ref:`lançador py.exe <launcher>` instalado, você pode usar o "
+"comando :file:`py`. Veja :ref:`setting-envvars` para outras maneiras de "
+"executar o Python."
 
 #: ../../tutorial/interpreter.rst:31
 msgid ""
@@ -72,7 +77,7 @@ msgid ""
 "exit status.  If that doesn't work, you can exit the interpreter by typing "
 "the following command: ``quit()``."
 msgstr ""
-"Digitando um caractere fim-de-arquivo (:kbd:`Control-D` no Unix, :kbd:"
+"Digitando um caractere de fim-de-arquivo (:kbd:`Control-D` no Unix, :kbd:"
 "`Control-Z` no Windows) diretamente no prompt força o interpretador a sair "
 "com status de saída zero. Se isso não funcionar, você pode sair do "
 "interpretador digitando o seguinte comando: ``quit()``."
@@ -90,14 +95,14 @@ msgid ""
 "backspace to remove characters from the current line."
 msgstr ""
 "Os recursos de edição de linha do interpretador incluem edição interativa, "
-"substituição de histórico e complemento de código, em sistemas que suportam "
-"a biblioteca `GNU Readline <https://tiswww.case.edu/php/chet/readline/rltop."
-"html>`_. Talvez a verificação mais rápida, para ver se a edição de linha de "
-"comando é suportada, é digitando :kbd:`Control-P` no primeiro prompt "
-"oferecido pelo Python. Se for emitido um bipe, você terá a edição da linha "
-"de comando; veja Apêndice :ref:`tut-interacting` para uma introdução às "
-"combinações. Se nada acontecer, ou se ``^P`` aparecer na tela, a edição da "
-"linha de comando não está disponível; você só poderá usar backspace para "
+"substituição de histórico e complemento de código, em sistemas com suporte à "
+"biblioteca `GNU Readline <https://tiswww.case.edu/php/chet/readline/rltop."
+"html>`_. Talvez a verificação mais rápida para ver se o suporte à edição de "
+"linha de comando está disponível é digitando :kbd:`Control-P` no primeiro "
+"prompt oferecido pelo Python. Se for emitido um bipe, você terá a edição da "
+"linha de comando; veja Apêndice :ref:`tut-interacting` para uma introdução "
+"às combinações. Se nada acontecer, ou se ``^P`` aparecer na tela, a edição "
+"da linha de comando não está disponível; você só poderá usar backspace para "
 "remover caracteres da linha atual."
 
 #: ../../tutorial/interpreter.rst:46
@@ -244,7 +249,7 @@ msgstr ""
 "embora a biblioteca padrão use apenas caracteres ASCII para identificadores, "
 "uma convenção que qualquer código portável deve seguir. Para exibir todos "
 "esses caracteres corretamente, seu editor deve reconhecer que o arquivo é "
-"UTF-8 e deve usar uma fonte que suporte todos os caracteres no arquivo."
+"UTF-8 e deve usar uma fonte com suporte a todos os caracteres no arquivo."
 
 #: ../../tutorial/interpreter.rst:140
 msgid ""
@@ -257,8 +262,7 @@ msgstr ""
 
 #: ../../tutorial/interpreter.rst:145
 msgid "where *encoding* is one of the valid :mod:`codecs` supported by Python."
-msgstr ""
-"onde *encoding* é uma das :mod:`codecs` válidas suportadas pelo Python."
+msgstr "onde *encoding* é uma das :mod:`codecs` válidas com suporte do Python."
 
 #: ../../tutorial/interpreter.rst:147
 msgid ""
