--- a/using/cmdline.po
+++ b/using/cmdline.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-09-17 11:28+0000\n"
+"POT-Creation-Date: 2019-11-16 11:56+0000\n"
 "PO-Revision-Date: 2017-02-16 23:41+0000\n"
 "Last-Translator: Mariana Costa <mrncstt@gmail.com>, 2019\n"
 "Language-Team: Portuguese (Brazil) (https://www.transifex.com/python-doc/"
@@ -612,7 +612,7 @@ msgstr ""
 #: ../../using/cmdline.rst:456
 msgid ""
 "Set the :attr:`~sys.flags.dev_mode` attribute of :attr:`sys.flags` to "
-"``True``"
+"``True``."
 msgstr ""
 
 #: ../../using/cmdline.rst:458
@@ -976,11 +976,11 @@ msgid ""
 msgstr ""
 
 #: ../../using/cmdline.rst:776
-msgid "``malloc_debug``: same as ``malloc`` but also install debug hooks"
+msgid "``malloc_debug``: same as ``malloc`` but also install debug hooks."
 msgstr ""
 
 #: ../../using/cmdline.rst:777
-msgid "``pymalloc_debug``: same as ``pymalloc`` but also install debug hooks"
+msgid "``pymalloc_debug``: same as ``pymalloc`` but also install debug hooks."
 msgstr ""
 
 #: ../../using/cmdline.rst:779
