--- a/whatsnew/3.6.po
+++ b/whatsnew/3.6.po
@@ -8,6 +8,7 @@
 # Victor Matheus Castro <victormatheuscastro@gmail.com>, 2017
 # Claudio Rogerio Carvalho Filho <excriptbrasil@gmail.com>, 2018
 # Marco Rougeth <marco@rougeth.com>, 2019
+# Vinicius Gubiani Ferreira <vini.g.fer@gmail.com>, 2019
 #
 #, fuzzy
 msgid ""
@@ -16,7 +17,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-09-01 14:24+0000\n"
 "PO-Revision-Date: 2017-02-16 23:45+0000\n"
-"Last-Translator: Marco Rougeth <marco@rougeth.com>, 2019\n"
+"Last-Translator: Vinicius Gubiani Ferreira <vini.g.fer@gmail.com>, 2019\n"
 "Language-Team: Portuguese (Brazil) (https://www.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
 "MIME-Version: 1.0\n"
@@ -3220,6 +3221,9 @@ msgid ""
 "Subclasses of :class:`type` which don't override ``type.__new__`` may no "
 "longer use the one-argument form to get the type of an object."
 msgstr ""
+"Sub-classes de :class:`type` que não fazem sobrecarga de ``type.__new__`` "
+"não podem mais usar a forma com apenas um argumento para obter o tipo de um "
+"objeto."
 
 #: ../../whatsnew/3.6.rst:2236
 msgid ""
