--- a/c-api/abstract.po
+++ b/c-api/abstract.po
@@ -6,6 +6,7 @@
 # Translators:
 # Erick Simões <erick.simoes@yahoo.com.br>, 2017
 # Noeme Matos <noeme_matos@hotmail.com>, 2017
+# Rafael Fontenelle <rffontenelle@gmail.com>, 2019
 #
 #, fuzzy
 msgid ""
@@ -14,7 +15,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-09-01 14:24+0000\n"
 "PO-Revision-Date: 2017-02-16 17:32+0000\n"
-"Last-Translator: Noeme Matos <noeme_matos@hotmail.com>, 2017\n"
+"Last-Translator: Rafael Fontenelle <rffontenelle@gmail.com>, 2019\n"
 "Language-Team: Portuguese (Brazil) (https://www.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
 "MIME-Version: 1.0\n"
@@ -37,7 +38,7 @@ msgstr ""
 "As funções deste capítulo interagem com objetos Python de acordo com a sua "
 "tipagem, ou de acordo com as classes dos tipos de objetos (Exemplo: todos os "
 "tipos numéricos, todos os tipos de sequência). Quando usado em um objeto de "
-"um tipo que não se aplica será lançada uma exceção do Python."
+"um tipo que não se aplica será levantada uma exceção do Python."
 
 #: ../../c-api/abstract.rst:14
 msgid ""
