--- a/c-api/import.po
+++ b/c-api/import.po
@@ -6,6 +6,7 @@
 # Translators:
 # Ozeas Santos <computer.ozeas@gmail.com>, 2018
 # Peterson Segatto Müller <p.smuller@outlook.com>, 2018
+# Rafael Fontenelle <rffontenelle@gmail.com>, 2019
 #
 #, fuzzy
 msgid ""
@@ -14,7 +15,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-10-31 11:48+0000\n"
 "PO-Revision-Date: 2017-02-16 17:35+0000\n"
-"Last-Translator: Peterson Segatto Müller <p.smuller@outlook.com>, 2018\n"
+"Last-Translator: Rafael Fontenelle <rffontenelle@gmail.com>, 2019\n"
 "Language-Team: Portuguese (Brazil) (https://www.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
 "MIME-Version: 1.0\n"
@@ -48,7 +49,8 @@ msgstr "Essas funções usam importações absolutas."
 
 #: ../../c-api/import.rst:33
 msgid "This function is a deprecated alias of :c:func:`PyImport_ImportModule`."
-msgstr "Esta função tem um alias obsoleto: c: func: `PyImport_ImportModule`."
+msgstr ""
+"Esta função tem um alias descontinuado :c:func:`PyImport_ImportModule`."
 
 #: ../../c-api/import.rst:35
 msgid ""
