--- a/distutils/apiref.po
+++ b/distutils/apiref.po
@@ -7,6 +7,7 @@
 # And Past <andrepgs@gmail.com>, 2017
 # Claudio Rogerio Carvalho Filho <excriptbrasil@gmail.com>, 2017
 # Hildeberto Abreu Magalhães <hildeberto@gmail.com>, 2019
+# Rafael Fontenelle <rffontenelle@gmail.com>, 2019
 #
 #, fuzzy
 msgid ""
@@ -15,7 +16,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-09-11 00:37+0000\n"
 "PO-Revision-Date: 2017-02-16 17:40+0000\n"
-"Last-Translator: Hildeberto Abreu Magalhães <hildeberto@gmail.com>, 2019\n"
+"Last-Translator: Rafael Fontenelle <rffontenelle@gmail.com>, 2019\n"
 "Language-Team: Portuguese (Brazil) (https://www.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
 "MIME-Version: 1.0\n"
@@ -45,6 +46,10 @@ msgid ""
 "documentation at https://setuptools.readthedocs.io/en/latest/setuptools.html "
 "independently covers all of the relevant information currently included here."
 msgstr ""
+"Este documento está sendo mantido apenas até que a documentação do "
+"``setuptools`` em https://setuptools.readthedocs.io/en/latest/setuptools."
+"html cubra independentemente todas as informações relevantes atualmente "
+"incluídas aqui."
 
 #: ../../distutils/apiref.rst:19
 msgid ":mod:`distutils.core` --- Core Distutils functionality"
