--- a/distutils/builtdist.po
+++ b/distutils/builtdist.po
@@ -9,6 +9,7 @@
 # (Douglas da Silva) <dementikovalev@yandex.ru>, 2017
 # Claudio Rogerio Carvalho Filho <excriptbrasil@gmail.com>, 2017
 # Otávio Carneiro <otavio@carneiro.blog.br>, 2019
+# Rafael Fontenelle <rffontenelle@gmail.com>, 2019
 #
 #, fuzzy
 msgid ""
@@ -17,7 +18,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-09-01 14:24+0000\n"
 "PO-Revision-Date: 2017-02-16 17:40+0000\n"
-"Last-Translator: Otávio Carneiro <otavio@carneiro.blog.br>, 2019\n"
+"Last-Translator: Rafael Fontenelle <rffontenelle@gmail.com>, 2019\n"
 "Language-Team: Portuguese (Brazil) (https://www.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
 "MIME-Version: 1.0\n"
@@ -36,6 +37,10 @@ msgid ""
 "documentation at https://setuptools.readthedocs.io/en/latest/setuptools.html "
 "independently covers all of the relevant information currently included here."
 msgstr ""
+"Este documento está sendo mantido apenas até que a documentação do "
+"``setuptools`` em https://setuptools.readthedocs.io/en/latest/setuptools."
+"html cubra independentemente todas as informações relevantes atualmente "
+"incluídas aqui."
 
 #: ../../distutils/builtdist.rst:9
 msgid ""
