--- a/howto/urllib2.po
+++ b/howto/urllib2.po
@@ -8,6 +8,7 @@
 # Leticia Portella <leportella@gmail.com>, 2017
 # Otávio Carneiro <otavio@carneiro.blog.br>, 2017
 # Claudio Rogerio Carvalho Filho <excriptbrasil@gmail.com>, 2017
+# Sheila Gomes <sheilagomes1@gmail.com>, 2019
 #
 #, fuzzy
 msgid ""
@@ -16,8 +17,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-09-01 14:24+0000\n"
 "PO-Revision-Date: 2017-02-16 17:46+0000\n"
-"Last-Translator: Claudio Rogerio Carvalho Filho <excriptbrasil@gmail.com>, "
-"2017\n"
+"Last-Translator: Sheila Gomes <sheilagomes1@gmail.com>, 2019\n"
 "Language-Team: Portuguese (Brazil) (https://www.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
 "MIME-Version: 1.0\n"
@@ -228,6 +228,8 @@ msgid ""
 "Notice that the full URL is created by adding a ``?`` to the URL, followed "
 "by the encoded values."
 msgstr ""
+"Observe que o URL completo é criado pela adição de um ``? `` ao URL, seguido "
+"pelos valores codificados."
 
 #: ../../howto/urllib2.rst:165
 msgid "Headers"
