--- a/reference/import.po
+++ b/reference/import.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-09-01 14:24+0000\n"
+"POT-Creation-Date: 2019-11-13 11:56+0000\n"
 "PO-Revision-Date: 2017-02-16 23:38+0000\n"
 "Last-Translator: Claudio Rogerio Carvalho Filho <excriptbrasil@gmail.com>, "
 "2017\n"
@@ -879,7 +879,7 @@ msgid ""
 "the cache is up-to-date with the source ``.py`` file. By default, Python "
 "does this by storing the source's last-modified timestamp and size in the "
 "cache file when writing it. At runtime, the import system then validates the "
-"cache file by checking the stored metadata in the cache file against at "
+"cache file by checking the stored metadata in the cache file against the "
 "source's metadata."
 msgstr ""
 
@@ -1099,7 +1099,7 @@ msgstr ""
 
 #: ../../reference/import.rst:852
 msgid ""
-":meth:`~importlib.abc.PathEntryFinder.find_spec` takes two argument, the "
+":meth:`~importlib.abc.PathEntryFinder.find_spec` takes two arguments: the "
 "fully qualified name of the module being imported, and the (optional) target "
 "module.  ``find_spec()`` returns a fully populated spec for the module. This "
 "spec will always have \"loader\" set (with one exception)."
@@ -1191,8 +1191,8 @@ msgstr ""
 
 #: ../../reference/import.rst:916
 msgid ""
-"To selectively prevent import of some modules from a hook early on the meta "
-"path (rather than disabling the standard import system entirely), it is "
+"To selectively prevent the import of some modules from a hook early on the "
+"meta path (rather than disabling the standard import system entirely), it is "
 "sufficient to raise :exc:`ModuleNotFoundError` directly from :meth:"
 "`~importlib.abc.MetaPathFinder.find_spec` instead of returning ``None``. The "
 "latter indicates that the meta path search should continue, while raising an "
