--- a/tutorial/appendix.po
+++ b/tutorial/appendix.po
@@ -7,6 +7,7 @@
 # Claudio Rogerio Carvalho Filho <excriptbrasil@gmail.com>, 2017
 # Cauê Baasch de Souza <cauebaasch@gmail.com>, 2017
 # msilvavieira, 2017
+# Rafael Fontenelle <rffontenelle@gmail.com>, 2019
 #
 #, fuzzy
 msgid ""
@@ -15,7 +16,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-09-01 14:24+0000\n"
 "PO-Revision-Date: 2017-02-16 23:39+0000\n"
-"Last-Translator: msilvavieira, 2017\n"
+"Last-Translator: Rafael Fontenelle <rffontenelle@gmail.com>, 2019\n"
 "Language-Team: Portuguese (Brazil) (https://www.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
 "MIME-Version: 1.0\n"
@@ -71,7 +72,7 @@ msgstr ""
 "Digitar o caractere de interrupção (geralmente :kbd:`Control-C` ou :kbd:"
 "`Delete`) em prompts primários ou secundários causam a interrupção da "
 "entrada de dados e o retorno ao prompt primário. [#]_ Digitar a interrupção "
-"durante a execução de um comando lança a exceção :exc:`KeyboardInterrupt`, "
+"durante a execução de um comando levanta a exceção :exc:`KeyboardInterrupt`, "
 "que pode ser tratada por uma declaração :keyword:`try`."
 
 #: ../../tutorial/appendix.rst:38
