--- a/tutorial/modules.po
+++ b/tutorial/modules.po
@@ -8,6 +8,7 @@
 # Claudio Rogerio Carvalho Filho <excriptbrasil@gmail.com>, 2017
 # Hildeberto Abreu Magalhães <hildeberto@gmail.com>, 2019
 # Adorilson Bezerra <adorilson@gmail.com>, 2019
+# Rafael Fontenelle <rffontenelle@gmail.com>, 2019
 #
 #, fuzzy
 msgid ""
@@ -16,7 +17,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-09-01 14:24+0000\n"
 "PO-Revision-Date: 2017-02-16 23:41+0000\n"
-"Last-Translator: Adorilson Bezerra <adorilson@gmail.com>, 2019\n"
+"Last-Translator: Rafael Fontenelle <rffontenelle@gmail.com>, 2019\n"
 "Language-Team: Portuguese (Brazil) (https://www.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
 "MIME-Version: 1.0\n"
@@ -652,7 +653,7 @@ msgstr ""
 "subpacote, submódulo, classe, função ou variável. O comando ``import`` "
 "primeiro testa se o item está definido no pacote, senão assume que é um "
 "módulo e tenta carregá-lo. Se falhar em encontrar o módulo, uma exceção :exc:"
-"`ImportError` é lançada."
+"`ImportError` é levantada."
 
 #: ../../tutorial/modules.rst:470
 msgid ""
