--- a/faq/windows.po
+++ b/faq/windows.po
@@ -7,8 +7,8 @@
 # Ruan Aragão <ruanaragao2@gmail.com>, 2017
 # Claudio Rogerio Carvalho Filho <excriptbrasil@gmail.com>, 2018
 # Raul Lima <raul.filipe365@gmail.com>, 2019
-# Hortencia_Arliane <hortenciaxavierifrn@gmail.com>, 2019
 # Adorilson Bezerra <adorilson@gmail.com>, 2019
+# Hortencia_Arliane <hortenciaxavierifrn@gmail.com>, 2019
 #
 #, fuzzy
 msgid ""
@@ -17,7 +17,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-09-01 14:24+0000\n"
 "PO-Revision-Date: 2017-02-16 17:43+0000\n"
-"Last-Translator: Adorilson Bezerra <adorilson@gmail.com>, 2019\n"
+"Last-Translator: Hortencia_Arliane <hortenciaxavierifrn@gmail.com>, 2019\n"
 "Language-Team: Portuguese (Brazil) (https://www.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
 "MIME-Version: 1.0\n"
@@ -132,6 +132,11 @@ msgid ""
 "`Z`, then hit the \":kbd:`Enter`\" key to get back to your Windows command "
 "prompt."
 msgstr ""
+"Muitas pessoas usam o modo interativo como uma calculadora conveniente, mas "
+"altamente programável. Quando quiser encerrar sua sessão interativa do "
+"Python, chame a função: func: `exit` ou mantenha pressionada a tecla: kbd:` "
+"Ctrl` enquanto você digita a: kbd: `Z` e pressione a tecla\": kbd: `Enter `` "
+"para voltar ao prompt de comando do Windows."
 
 #: ../../faq/windows.rst:90
 msgid ""
@@ -157,6 +162,8 @@ msgid ""
 "So now you'll ask the ``py`` command to give your script to Python by typing "
 "``py`` followed by your script path::"
 msgstr ""
+"Então agora você solicitará o comando `` py`` para fornecer seu script para "
+"Python, digitando `` py`` seguido pelo seu caminho de script:"
 
 #: ../../faq/windows.rst:114
 msgid "How do I make Python scripts executable?"
