--- a/glossary.po
+++ b/glossary.po
@@ -8,12 +8,12 @@
 # hi_hi_ray, 2017
 # And Past <andrepgs@gmail.com>, 2017
 # Welington Carlos <wcarlos3@gmail.com>, 2018
-# Marco Rougeth <marco@rougeth.com>, 2019
 # Rafael Fontenelle <rffontenelle@gmail.com>, 2019
 # Alexandre B A Villares, 2019
 # felipe caridade <caridade500@gmail.com>, 2019
 # Claudio Rogerio Carvalho Filho <excriptbrasil@gmail.com>, 2019
 # Adorilson Bezerra <adorilson@gmail.com>, 2019
+# Marco Rougeth <marco@rougeth.com>, 2019
 #
 #, fuzzy
 msgid ""
@@ -22,7 +22,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-10-01 11:34+0000\n"
 "PO-Revision-Date: 2017-02-16 17:32+0000\n"
-"Last-Translator: Adorilson Bezerra <adorilson@gmail.com>, 2019\n"
+"Last-Translator: Marco Rougeth <marco@rougeth.com>, 2019\n"
 "Language-Team: Portuguese (Brazil) (https://www.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
 "MIME-Version: 1.0\n"
@@ -438,7 +438,7 @@ msgstr ""
 
 #: ../../glossary.rst:200
 msgid "coercion"
-msgstr "Coerção"
+msgstr "coerção"
 
 #: ../../glossary.rst:202
 msgid ""
@@ -818,7 +818,7 @@ msgstr "Um sinônimo do termo :term:`file object`."
 
 #: ../../glossary.rst:377
 msgid "finder"
-msgstr "finder"
+msgstr ""
 
 #: ../../glossary.rst:379
 msgid ""
@@ -860,7 +860,7 @@ msgstr ""
 
 #: ../../glossary.rst:394
 msgid "function"
-msgstr "function (função)"
+msgstr "função"
 
 #: ../../glossary.rst:396
 msgid ""
@@ -1433,7 +1433,7 @@ msgstr ""
 
 #: ../../glossary.rst:657
 msgid "list"
-msgstr "list"
+msgstr "lista"
 
 #: ../../glossary.rst:659
 msgid ""
@@ -1587,7 +1587,7 @@ msgstr ""
 
 #: ../../glossary.rst:722
 msgid "module"
-msgstr "module (módulo)"
+msgstr "módulo"
 
 #: ../../glossary.rst:724
 msgid ""
@@ -1626,7 +1626,7 @@ msgstr " Veja :term:`method resolution order`."
 
 #: ../../glossary.rst:736
 msgid "mutable"
-msgstr "mutable (mutável)"
+msgstr "mutável"
 
 #: ../../glossary.rst:738
 msgid ""
@@ -1638,7 +1638,7 @@ msgstr ""
 
 #: ../../glossary.rst:740
 msgid "named tuple"
-msgstr "named tuple"
+msgstr "tupla nomeada"
 
 #: ../../glossary.rst:742
 msgid ""
@@ -1748,7 +1748,7 @@ msgstr ""
 
 #: ../../glossary.rst:804
 msgid "package"
-msgstr "package (pacote)"
+msgstr "pacote"
 
 #: ../../glossary.rst:806
 msgid ""
@@ -2379,7 +2379,7 @@ msgstr "Veja também :mod:`venv`."
 
 #: ../../glossary.rst:1145
 msgid "virtual machine"
-msgstr "Máquina Virtual"
+msgstr "máquina virtual"
 
 #: ../../glossary.rst:1147
 msgid ""
