--- a/howto/logging-cookbook.po
+++ b/howto/logging-cookbook.po
@@ -6,6 +6,7 @@
 # Translators:
 # Claudio Rogerio Carvalho Filho <excriptbrasil@gmail.com>, 2017
 # Katyanna Moura <amelie.kn@gmail.com>, 2019
+# Marco Rougeth <marco@rougeth.com>, 2019
 #
 #, fuzzy
 msgid ""
@@ -14,7 +15,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-09-01 14:24+0000\n"
 "PO-Revision-Date: 2017-02-16 17:45+0000\n"
-"Last-Translator: Katyanna Moura <amelie.kn@gmail.com>, 2019\n"
+"Last-Translator: Marco Rougeth <marco@rougeth.com>, 2019\n"
 "Language-Team: Portuguese (Brazil) (https://www.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
 "MIME-Version: 1.0\n"
@@ -771,11 +772,11 @@ msgstr "Módulo :mod:`logging.config`"
 
 #: ../../howto/logging-cookbook.rst:1357
 msgid "Configuration API for the logging module."
-msgstr ""
+msgstr "API de configuração para o módulo logging."
 
 #: ../../howto/logging-cookbook.rst:1360
 msgid "Module :mod:`logging.handlers`"
-msgstr ""
+msgstr "Módulo :mod:`logging.handlers`"
 
 #: ../../howto/logging-cookbook.rst:1360
 msgid "Useful handlers included with the logging module."
