--- a/about.po
+++ b/about.po
@@ -8,9 +8,8 @@
 # And Past <andrepgs@gmail.com>, 2017
 # Vitor Hugo <vitor.hov@gmail.com>, 2018
 # Lucas Ferreira <lucaasferreira245@gmail.com>, 2018
-# belladonnatuk <belladonnatuk@gmail.com>, 2019
-# Marco Rougeth <marco@rougeth.com>, 2019
 # Adorilson Bezerra <adorilson@gmail.com>, 2019
+# Marco Rougeth <marco@rougeth.com>, 2019
 #
 #, fuzzy
 msgid ""
@@ -19,7 +18,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-09-01 14:24+0000\n"
 "PO-Revision-Date: 2017-02-16 17:31+0000\n"
-"Last-Translator: Adorilson Bezerra <adorilson@gmail.com>, 2019\n"
+"Last-Translator: Marco Rougeth <marco@rougeth.com>, 2019\n"
 "Language-Team: Portuguese (Brazil) (https://www.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
 "MIME-Version: 1.0\n"
@@ -30,7 +29,7 @@ msgstr ""
 
 #: ../../about.rst:3
 msgid "About these documents"
-msgstr "Sobre a Documentação"
+msgstr "Sobre esses documentos"
 
 #: ../../about.rst:6
 msgid ""
