--- a/c-api/arg.po
+++ b/c-api/arg.po
@@ -15,6 +15,7 @@
 # Caio Carvalho <caiocarvalho.py@gmail.com>, 2019
 # Rafael Fontenelle <rffontenelle@gmail.com>, 2019
 # Hildeberto Abreu Magalhães <hildeberto@gmail.com>, 2019
+# Miquéias Praxedes <miqueiasjoab123@gmail.com>, 2019
 #
 #, fuzzy
 msgid ""
@@ -23,7 +24,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-10-31 11:48+0000\n"
 "PO-Revision-Date: 2017-02-16 17:33+0000\n"
-"Last-Translator: Hildeberto Abreu Magalhães <hildeberto@gmail.com>, 2019\n"
+"Last-Translator: Miquéias Praxedes <miqueiasjoab123@gmail.com>, 2019\n"
 "Language-Team: Portuguese (Brazil) (https://www.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
 "MIME-Version: 1.0\n"
@@ -138,6 +139,11 @@ msgid ""
 "object's :c:member:`PyBufferProcs.bf_releasebuffer` field is ``NULL``, which "
 "disallows mutable objects such as :class:`bytearray`."
 msgstr ""
+"Alguns formatos requerem um somente leitura: term: `bytes-like object` e "
+"definem um ponteiro em vez de uma estrutura de buffer. Eles trabalham "
+"verificando se o campo do objeto: c: member: `PyBufferProcs."
+"bf_releasebuffer` é` `NULL``, o que não permite objetos mutáveis, como: "
+"class:` bytearray`."
 
 #: ../../c-api/arg.rst:58
 msgid ""
@@ -246,6 +252,8 @@ msgid ""
 "Like ``s``, but the Python object may also be ``None``, in which case the C "
 "pointer is set to ``NULL``."
 msgstr ""
+"Como `` s``, mas o objeto Python também pode ser `` None``, nesse caso o "
+"ponteiro C é definido como `` NULL``."
 
 #: ../../c-api/arg.rst:106
 msgid ""
@@ -258,6 +266,8 @@ msgid ""
 "Like ``s*``, but the Python object may also be ``None``, in which case the "
 "``buf`` member of the :c:type:`Py_buffer` structure is set to ``NULL``."
 msgstr ""
+"Como `` s * ``, mas o objeto Python também pode ser `` None``, nesse caso o "
+"membro `` buf`` da estrutura: c: type: `Py_buffer` é definido como` `NULL`` ."
 
 #: ../../c-api/arg.rst:110
 msgid ""
@@ -272,6 +282,8 @@ msgid ""
 "Like ``s#``, but the Python object may also be ``None``, in which case the C "
 "pointer is set to ``NULL``."
 msgstr ""
+"Como `` s # ``, mas o objeto Python também pode ser `` None``, nesse caso o "
+"ponteiro C é definido como `` NULL``."
 
 #: ../../c-api/arg.rst:120
 msgid "``y`` (read-only :term:`bytes-like object`) [const char \\*]"
@@ -406,6 +418,8 @@ msgid ""
 "Like ``u``, but the Python object may also be ``None``, in which case the :c:"
 "type:`Py_UNICODE` pointer is set to ``NULL``."
 msgstr ""
+"Como `` u``, mas o objeto Python também pode ser `` None``, nesse caso o "
+"ponteiro: c: type: `Py_UNICODE` é definido como` `NULL``."
 
 #: ../../c-api/arg.rst:181
 msgid "``Z#`` (:class:`str` or ``None``) [const Py_UNICODE \\*, int]"
@@ -416,6 +430,8 @@ msgid ""
 "Like ``u#``, but the Python object may also be ``None``, in which case the :"
 "c:type:`Py_UNICODE` pointer is set to ``NULL``."
 msgstr ""
+"Como `` u # ``, mas o objeto Python também pode ser `` None``, nesse caso o "
+"ponteiro: c: type: `Py_UNICODE` é definido como` `NULL``"
 
 #: ../../c-api/arg.rst:186
 msgid "``U`` (:class:`str`) [PyObject \\*]"
@@ -472,6 +488,14 @@ msgid ""
 "text. The text will be encoded in the encoding specified by the first "
 "argument."
 msgstr ""
+"Este formato requer dois argumentos. O primeiro é usado apenas como entrada "
+"e deve ser a: c: type: `const char \\ *` que aponta para o nome de uma "
+"codificação como uma string terminada em NUL ou `` NULL``, nesse caso `` A "
+"codificação 'utf-8' 'é usada. Uma exceção será gerada se a codificação "
+"nomeada não for conhecida pelo Python. O segundo argumento deve ser a: c: "
+"type: `char \\ * \\ *`; o valor do ponteiro a que ele faz referência será "
+"definido como um buffer com o conteúdo do texto do argumento. O texto será "
+"codificado na codificação especificada pelo primeiro argumento."
 
 #: ../../c-api/arg.rst:206
 msgid ""
@@ -533,6 +557,16 @@ msgid ""
 "The third argument must be a pointer to an integer; the referenced integer "
 "will be set to the number of bytes in the output buffer."
 msgstr ""
+"Requer três argumentos. O primeiro é usado apenas como entrada e deve ser a: "
+"c: type: `const char \\ *` que aponta para o nome de uma codificação como "
+"uma string terminada em NUL ou `` NULL``, nesse caso `` A codificação "
+"'utf-8' 'é usada. Uma exceção será gerada se a codificação nomeada não for "
+"conhecida pelo Python. O segundo argumento deve ser a: c: type: `char \\ * "
+"\\ *`; o valor do ponteiro a que ele faz referência será definido como um "
+"buffer com o conteúdo do texto do argumento. O texto será codificado na "
+"codificação especificada pelo primeiro argumento. O terceiro argumento deve "
+"ser um ponteiro para um número inteiro; o número inteiro referenciado será "
+"definido como o número de bytes no buffer de saída."
 
 #: ../../c-api/arg.rst:231
 msgid "There are two modes of operation:"
@@ -825,14 +859,19 @@ msgid ""
 "call, the *object* parameter will be ``NULL``; *address* will have the same "
 "value as in the original call."
 msgstr ""
+"Se o * converter * retornar `` Py_CLEANUP_SUPPORTED``, ele poderá ser "
+"chamado uma segunda vez se a análise do argumento eventualmente falhar, "
+"dando ao conversor a chance de liberar qualquer memória que já havia "
+"alocado. Nesta segunda chamada, o parâmetro * object * será `` NULL``; * "
+"endereço * terá o mesmo valor que na chamada original."
 
 #: ../../c-api/arg.rst:351
 msgid "``Py_CLEANUP_SUPPORTED`` was added."
-msgstr ""
+msgstr "109 `` Py_CLEANUP_SUPPORTED`` foi adicionado."
 
 #: ../../c-api/arg.rst:361
 msgid "``p`` (:class:`bool`) [int]"
-msgstr ""
+msgstr "`` p`` (: class: `bool`) [int]"
 
 #: ../../c-api/arg.rst:355
 msgid ""
@@ -842,6 +881,11 @@ msgid ""
 "accepts any valid Python value.  See :ref:`truth` for more information about "
 "how Python tests values for truth."
 msgstr ""
+"Testa o valor transmitido para a verdade (um booleano ** p ** \\ redicate) e "
+"converte o resultado em seu valor inteiro C verdadeiro / falso equivalente. "
+"Define o int como `` 1`` se a expressão for verdadeira e `` 0`` se for "
+"falsa. Isso aceita qualquer valor válido do Python. Veja: ref: `truth` para "
+"obter mais informações sobre como o Python testa valores para a verdade."
 
 #: ../../c-api/arg.rst:366 ../../c-api/arg.rst:660
 msgid "``(items)`` (:class:`tuple`) [*matching-items*]"
@@ -853,6 +897,10 @@ msgid ""
 "units in *items*.  The C arguments must correspond to the individual format "
 "units in *items*.  Format units for sequences may be nested."
 msgstr ""
+"O objeto deve ser uma sequência Python cujo comprimento seja o número de "
+"unidades de formato em * itens *. Os argumentos C devem corresponder às "
+"unidades de formato individuais em * itens *. As unidades de formato para "
+"sequências podem ser aninhadas."
 
 #: ../../c-api/arg.rst:368
 msgid ""
