--- a/c-api/exceptions.po
+++ b/c-api/exceptions.po
@@ -9,6 +9,7 @@
 # Claudio Rogerio Carvalho Filho <excriptbrasil@gmail.com>, 2017
 # Richard Nixon <richardnixon@posteo.cz>, 2019
 # Renan Lopes <renans.l@icloud.com>, 2019
+# Marco Rougeth <marco@rougeth.com>, 2019
 #
 #, fuzzy
 msgid ""
@@ -17,7 +18,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-10-31 11:48+0000\n"
 "PO-Revision-Date: 2017-02-16 17:35+0000\n"
-"Last-Translator: Renan Lopes <renans.l@icloud.com>, 2019\n"
+"Last-Translator: Marco Rougeth <marco@rougeth.com>, 2019\n"
 "Language-Team: Portuguese (Brazil) (https://www.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
 "MIME-Version: 1.0\n"
@@ -248,7 +249,7 @@ msgstr ""
 #: ../../c-api/exceptions.rst:217 ../../c-api/exceptions.rst:225
 #: ../../c-api/exceptions.rst:234 ../../c-api/exceptions.rst:243
 msgid ":ref:`Availability <availability>`: Windows."
-msgstr ""
+msgstr ":ref:`Disponibilidade <availability>`: Windows."
 
 #: ../../c-api/exceptions.rst:205
 msgid ""
