--- a/c-api/init.po
+++ b/c-api/init.po
@@ -7,6 +7,7 @@
 # Raphael Mendonça, 2017
 # Claudio Rogerio Carvalho Filho <excriptbrasil@gmail.com>, 2018
 # Rafael Marques <rafaelomarques@gmail.com>, 2019
+# Marco Rougeth <marco@rougeth.com>, 2019
 #
 #, fuzzy
 msgid ""
@@ -15,7 +16,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-11-16 11:56+0000\n"
 "PO-Revision-Date: 2017-02-16 17:36+0000\n"
-"Last-Translator: Rafael Marques <rafaelomarques@gmail.com>, 2019\n"
+"Last-Translator: Marco Rougeth <marco@rougeth.com>, 2019\n"
 "Language-Team: Portuguese (Brazil) (https://www.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
 "MIME-Version: 1.0\n"
@@ -309,7 +310,7 @@ msgstr ""
 
 #: ../../c-api/init.rst:162 ../../c-api/init.rst:174
 msgid ":ref:`Availability <availability>`: Windows."
-msgstr ""
+msgstr ":ref:`Disponibilidade <availability>`: Windows."
 
 #: ../../c-api/init.rst:166
 msgid ""
