--- a/howto/logging.po
+++ b/howto/logging.po
@@ -8,6 +8,8 @@
 # Leticia Portella <leportella@gmail.com>, 2017
 # Claudio Rogerio Carvalho Filho <excriptbrasil@gmail.com>, 2017
 # Katyanna Moura <amelie.kn@gmail.com>, 2019
+# Hildeberto Abreu Magalhães <hildeberto@gmail.com>, 2019
+# Marco Rougeth <marco@rougeth.com>, 2019
 #
 #, fuzzy
 msgid ""
@@ -16,7 +18,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-09-01 14:24+0000\n"
 "PO-Revision-Date: 2017-02-16 17:45+0000\n"
-"Last-Translator: Katyanna Moura <amelie.kn@gmail.com>, 2019\n"
+"Last-Translator: Marco Rougeth <marco@rougeth.com>, 2019\n"
 "Language-Team: Portuguese (Brazil) (https://www.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
 "MIME-Version: 1.0\n"
@@ -462,23 +464,28 @@ msgstr ""
 
 #: ../../howto/logging.rst:345
 msgid "Loggers expose the interface that application code directly uses."
-msgstr ""
+msgstr "Loggers expõem a interface que o código da aplicação usa diretamente."
 
 #: ../../howto/logging.rst:346
 msgid ""
 "Handlers send the log records (created by loggers) to the appropriate "
 "destination."
 msgstr ""
+"Handlers enviam os registros do evento (criados por loggers) aos destinos "
+"apropriados."
 
 #: ../../howto/logging.rst:348
 msgid ""
 "Filters provide a finer grained facility for determining which log records "
 "to output."
 msgstr ""
+"Filters fornecem uma facilidade granular para determinar quais registros de "
+"eventos enviar à saída."
 
 #: ../../howto/logging.rst:350
 msgid "Formatters specify the layout of log records in the final output."
 msgstr ""
+"Formatters especificam o layout dos registros de eventos na saída final."
 
 #: ../../howto/logging.rst:352
 msgid ""
@@ -1440,11 +1447,11 @@ msgstr "Módulo :mod:`logging.config`"
 
 #: ../../howto/logging.rst:1098
 msgid "Configuration API for the logging module."
-msgstr ""
+msgstr "API de configuração para o módulo logging."
 
 #: ../../howto/logging.rst:1101
 msgid "Module :mod:`logging.handlers`"
-msgstr ""
+msgstr "Módulo :mod:`logging.handlers`"
 
 #: ../../howto/logging.rst:1101
 msgid "Useful handlers included with the logging module."
