--- a/using/cmdline.po
+++ b/using/cmdline.po
@@ -6,6 +6,7 @@
 # Translators:
 # Raphael Mendonça, 2017
 # Mariana Costa <mrncstt@gmail.com>, 2019
+# Marco Rougeth <marco@rougeth.com>, 2019
 #
 #, fuzzy
 msgid ""
@@ -14,7 +15,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-11-16 11:56+0000\n"
 "PO-Revision-Date: 2017-02-16 23:41+0000\n"
-"Last-Translator: Mariana Costa <mrncstt@gmail.com>, 2019\n"
+"Last-Translator: Marco Rougeth <marco@rougeth.com>, 2019\n"
 "Language-Team: Portuguese (Brazil) (https://www.transifex.com/python-doc/"
 "teams/5390/pt_BR/)\n"
 "MIME-Version: 1.0\n"
@@ -1030,7 +1031,7 @@ msgstr ""
 
 #: ../../using/cmdline.rst:814 ../../using/cmdline.rst:828
 msgid ":ref:`Availability <availability>`: Windows."
-msgstr ""
+msgstr ":ref:`Disponibilidade <availability>`: Windows."
 
 #: ../../using/cmdline.rst:815
 msgid "See :pep:`529` for more details."
