Fix translation mistake
Changed to reflect the proper usage of the term in portuguese.

--- a/whatsnew/3.9.po
+++ b/whatsnew/3.9.po
@@ -1081,7 +1081,7 @@ msgid ""
 "arguments. (Contributed by Mark Dickinson, Ananthakrishnan and Serhiy "
 "Storchaka in :issue:`39479` and :issue:`39648`.)"
 msgstr ""
-"Adicionada :func:`math.lcm`: retorna o múltiplo menos comum de argumentos "
+"Adicionada :func:`math.lcm`: retorna o mínimo múltiplo comum dos argumentos "
 "especificados. (Contribuição de Mark Dickinson, Ananthakrishnan e Serhiy "
 "Storchaka em :issue:`39479` e :issue:` 39648`.)"
 
