--- a/install/index.po
+++ b/install/index.po
@@ -1827,7 +1827,7 @@ msgstr ""
 
 #: ../../install/index.rst:1027
 msgid "Older Versions of Python and MinGW"
-msgstr ""
+msgstr "Versões antigas do Python e do MinGW"
 
 #: ../../install/index.rst:1028
 msgid ""
@@ -1896,7 +1896,7 @@ msgstr ""
 
 #: ../../install/index.rst:1074
 msgid "Check https://www.sourceware.org/cygwin/ for more information"
-msgstr ""
+msgstr "Acesse https://www.sourceware.org/cygwin/ para mais informações"
 
 #: ../../install/index.rst:1076
 msgid ""
