Update interpreter.po translation
Adicionar aonde o comando deve estar dentro ao usar o interpretador por linha de comando

--- a/tutorial/interpreter.po
+++ b/tutorial/interpreter.po
@@ -132,7 +132,7 @@ msgstr ""
 "``, que executa uma ou mais instruções especificadas na posição *comando*, "
 "analogamente à opção de shell :option:`-c`. Considerando que comandos Python "
 "frequentemente têm espaços em branco (ou outros caracteres que são especiais "
-"para a shell) é aconselhável que o *comando* esteja dentro."
+"para a shell) é aconselhável que o *comando* esteja dentro de aspas."
 
 #: ../../tutorial/interpreter.rst:57
 msgid ""
