fix: file name 'logging.cong' to 'logging.conf'

--- a/howto/logging.po
+++ b/howto/logging.po
@@ -982,7 +982,7 @@ msgstr ""
 
 #: ../../howto/logging.rst:661
 msgid "Here is the logging.conf file:"
-msgstr "Aqui está o arquivo logging.cong:"
+msgstr "Aqui está o arquivo logging.conf:"
 
 #: ../../howto/logging.rst:693
 msgid ""
